# go-3ff

./: .gitignore  BUILD.bazel  LICENSE  Makefile  README.md  WORKSPACE  go.mod  go.sum  main.go  test_coverage.sh  tfgrep.go  third_party.bzl
cmd/: tfgrep.go
diff/: BUILD.bazel  diffable.go  lcs.go
hclparser/: BUILD.bazel  diff.go  extensions.go  modified-resources.go  parse.go  parse_test.go  printer.go  resource_extractor.go
utils/: BUILD.bazel  changefetcher.go  copy.go  output_cleaner.go
