load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "changefetcher.go",
        "copy.go",
    ],
    importpath = "github.com/maskimko/go-3ff/utils",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_fatih_color//:go_default_library",
        "@com_github_hashicorp_hcl2//hcl:go_default_library",
        "@com_github_hashicorp_hcl2//hcl/hclsyntax:go_default_library",
    ],
)
